--- a/fotos-aleksei.html
+++ b/fotos-aleksei.html
@@ -88,16 +88,16 @@ Uso interno restrito.
 
 <div class="galeria">
 
-<img src="img/fotos/foto01.jpg">
-<img src="img/fotos/foto02.jpg">
-<img src="img/fotos/foto03.jpg">
-<img src="img/fotos/foto04.jpg">
-<img src="img/fotos/foto05.jpg">
-<img src="img/fotos/foto06.jpg">
-<img src="img/fotos/foto07.jpg">
-<img src="img/fotos/foto08.jpg">
-<img src="img/fotos/foto09.jpg">
-<img src="img/fotos/foto10.jpg">
+<img src="foto01.jpg">
+<img src="foto02.jpg">
+<img src="foto03.jpg">
+<img src="foto04.jpg">
+<img src="foto05.jpg">
+<img src="foto06.jpg">
+<img src="foto07.jpg">
+<img src="foto08.jpg">
+<img src="foto09.jpg">
+<img src="foto10.jpg">
 
 </div>
 
