--- a/index.html
+++ b/index.html
@@ -263,9 +263,15 @@ footer {
 <div class="menu-header">
   <span>Menu</span>
   <div class="close-btn" onclick="closeMenu()">✕</div>
+<div class="menu" id="menu">
+
+<div class="menu-header">
+  <span>Menu</span>
+  <div class="close-btn" onclick="closeMenu()">✕</div>
 </div>
 
 <a href="casos.html">Casos</a>
+<a href="noticias.html">Notícias</a>
 <a href="instituicao.html">Instituição</a>
 <a href="profissionais.html">Profissionais</a>
 <a href="carreira.html">Carreira</a>
