--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ footer {
   <div class="close-btn" onclick="closeMenu()">✕</div>
 </div>
 
-<a href="casos.html">Casos Teste</a>
+<a href="casos.html">Casos</a>
 <a href="noticias.html">Notícias</a>
 <a href="instituicao.html">Instituição</a>
 <a href="profissionais.html">Profissionais</a>
