--- a/noticias.html
+++ b/noticias.html
@@ -123,7 +123,7 @@ color:var(--text-muted);
 <!-- CASO 041-B -->
 
 <div class="card">
-<a href="noticia-041b.html">
+<a href="card-041b.html">
 
 <div class="tag">Caso em Andamento</div>
 
