--- a/noticia-041b.html
+++ b/noticia-041b.html
@@ -89,7 +89,7 @@ margin-bottom:20px;
 .image{
 width:100%;
 height:260px;
-background:url('caso041-foto.jpg') center/cover no-repeat;
+background:url(caso041-foto.jpg) center/cover no-repeat;
 border-radius:4px;
 margin-bottom:25px;
 }
