--- a/noticia-041b2.html
+++ b/noticia-041b2.html
@@ -161,7 +161,7 @@ border-radius:2px;
 
 <div class="search-area">
 
-<button class="search-btn" id="searchBtn">🔍</button>
+<button class="search-btn" id="searchBtn">⌕</button>
 
 <input type="text" class="search" id="searchInput" placeholder="Pesquisar...">
 
