--- a/noticia-041b2.html
+++ b/noticia-041b2.html
@@ -224,6 +224,18 @@ foram encontrados próximos ao corpo, além de marcas de arrasto no piso.
 </p>
 
 <p>
+As gravações e registros técnicos seguem sob análise
+no setor pericial, sob responsabilidade da equipe
+liderada pela perita L. Morozova.
+</p>
+
+<p>
+O material permanece arquivado conforme
+protocolo interno de 17/11/2025,
+com acesso restrito.
+</p>
+
+<p>
 A coordenação do caso informou que equipes especializadas
 atuam na análise comportamental do agressor.
 Nenhum suspeito foi oficialmente identificado até o momento.
