--- a/painel-larisa.html
+++ b/painel-larisa.html
@@ -258,6 +258,7 @@ th{
 <a href="painel-larisa.html">Visão Geral</a>
 <a href="casos-ativos.html">Casos Ativos</a>
 <a href="casos-encerrados.html">Casos Encerrados</a>
+<a href="arquivos-larisa.html">Arquivos</a>
 <a href="relatorios.html">Relatórios</a>
 <a href="perfil-larisa.html">Perfil</a>
 
