--- a/noticia-041b2.html
+++ b/noticia-041b2.html
@@ -107,7 +107,7 @@ margin-bottom:20px;
 .image{
 width:100%;
 height:260px;
-background:url(caso041-foto.jpg) center/cover no-repeat;
+background:url(frag041-05.jpg) center/cover no-repeat;
 border-radius:4px;
 margin-bottom:25px;
 }
