--- a/arquivos-larisa.html
+++ b/arquivos-larisa.html
@@ -164,7 +164,21 @@ Documentação vinculada à análise forense e perícia criminal
 Relatórios de Perícia<br>
 (2019–2025)
 </div>
+  
+<!-- RELATÓRIO REVISADO -->
 
+<div class="folder">
+<a href="relatorio-2024-074L-revisado.html">
+
+<div class="icon">📂</div>
+
+<div class="name">
+Revisão Administrativa — Caso 074-L<br>
+Agosto/2024 (Revisado)
+</div>
+
+</a>
+</div>
 </a>
 </div>
 
